
 - Do texture uploads from the main thread instead of from separate threads;
   may or may not improve stability with NVIDIA's proprietary drivers.

 - When beginning a new video segment, the shutdown of the old encoder
   is now done in a background thread, in order to not disturb the external
   stream. The audio still goes into a somewhat random stream, though.


Nageru 1.2.1, April 15th, 2016

 - Images are now updated from disk about every second, so that it is possible
   to update e.g. overlays during streaming, although somewhat slowly.

 - Fix support for PNG images.

 - You can now send SIGHUP to start a new cut instead of using the menu.

 - Added a --help option.

 - Various tweaks to OpenGL fence handling.


Nageru 1.2.0, April 6th, 2016

 - Support for Blackmagic's PCI and Thunderbolt cards, using the official
   (closed-source) Blackmagic drivers. (You do not need the SDK installed, though.)
   You can use PCI and USB cards pretty much interchangeably.

 - Much more stable handling of frame queues on non-master cards. In particular,
   you can have a master card on 50 Hz and another card on 60 Hz without getting
   lots of warning messages and a 10+ frame latency on the second card.

 - Many new options in the right click menu on cards: Adjustable video inputs,
   adjustable audio inputs, adjustable resolutions, ability to select card for
   master clock.

 - Add support for starting with almost all audio processing turned off
   (--flat-audio).

 - The UI now marks inputs with red or green to mark them as participating in
   the live or preview signal, respectively. Red takes priority. (Actually,
   it merely asks the theme for a color for each input; the theme contains
   the logic.)

 - Add support for uncompressed video instead of H.264 on the HTTP server,
   while still storing H.264 to files (--http-uncompressed-video). Note that
   depending on your client, this might not actually be more CPU efficient