@@ -1,6 +1,7 @@
 #ifndef _FLAGS_H
 #define _FLAGS_H
 
+#include <map>
 #include <string>
 
 #include "defs.h"
@@ -23,6 +24,7 @@ struct Flags {
 	int x264_vbv_max_bitrate = -1;  // In kilobits. 0 = no limit, -1 = same as <x264_bitrate> (CBR).
 	int x264_vbv_buffer_size = -1;  // In kilobits. 0 = one-frame VBV, -1 = same as <x264_bitrate> (one-second VBV).
 	bool enable_alsa_output = true;
+	std::map<int, int> default_stream_mapping;
 };
 extern Flags global_flags;
 
